# curiosity_cottage_quant

./: .env  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  PROJECT_MANAGEMENT.md  README.md  alembic.ini  backtest_quantile_vs_normal.csv  diagnostic_report.md  docker-compose.yml  pyproject.toml  requirements-metal.txt  requirements.txt  run.py  tech_spec.md  test_grafana_auth.py  test_output.txt
adapters/: tiingo.py
agent/: graph.py  state.py
app/: main.py
backtest_results/: metrics_20251215_234546.json  metrics_20251215_234648.json  metrics_20251215_234746.json  metrics_20251215_235442.json
bff/: Dockerfile  index.js  package-lock.json  package.json  server.js
config/: watchlist.txt
docs/: INDEX.md  TECHNICAL_REFERENCE.md  development.md  glossary.md  system_status_report.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
metal/: chronos_mps.py  requirements.txt  soros_ane.py
models/: id_ed25519  id_ed25519.pub
protos/: brain.proto
scripts/: audit_full_system.py  backfill_tier1.py  backfill_tier2.py  backtest_quantile_comparison.py  boot_mesh.sh  check_data.py  check_questdb_data.py  codegen.py  convert_finbert_onnx.py  convert_to_coreml.py  debug_pb2.py  diagnose_market.py  fix_vector_schema.py  flatten_all.py  generate_audit_report.py  generate_full_audit.py  health_check_observability.py  health_check_services.sh  ingest_memory.py  init_questdb.py  init_repo.py  launch_live.sh  live_paper_trade.py  local_ci.sh  run_agent_loop.py  run_backtest.py  run_backtest_simulation.py  run_brain.py  run_full_system_test.py  seed_data_tiingo.py  seed_to_questdb.py  setup_python311.sh  sim_live_correlation.py  smoke_test.py  system_status.py  test_providers.py  test_quantile_system.py  test_quantum.py  test_scanner.py  test_websocket.py  (+48 more)
tests/: test_backtest.py  test_graph.py  test_kalman.py  test_metrics.py  test_production_hardening.py  (+2 more)
(+275 files in other folders)
