[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-v2-quant-engine"
version = "0.1.0-alpha"
description = "Curiosity Cottage V2 Autonomous Trading System"
authors = [
    { name = "Curiosity Cottage Capital", email = "cto@curiositycottage.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "litestar>=2.0.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "mlx-lm>=0.0.1",
    "langgraph>=0.0.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "langchain-community",
    "ollama",
    "loguru",
    "alpaca-trade-api",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "opentelemetry-instrumentation-asgi>=0.41b0",
    "pydantic-settings",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
